[gd_scene load_steps=10 format=3 uid="uid://cusq8qktrmu7k"]

[ext_resource type="Script" path="res://scenes/Characters/enemy_trigger.gd" id="1_kkwod"]
[ext_resource type="Texture2D" uid="uid://bl53gpvg5mh1y" path="res://assets/sprites/slime_green.png" id="1_urtbh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7bygd"]
atlas = ExtResource("1_urtbh")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eo68"]
atlas = ExtResource("1_urtbh")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea78g"]
atlas = ExtResource("1_urtbh")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgst8"]
atlas = ExtResource("1_urtbh")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ryc0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bygd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eo68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea78g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgst8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gk36g"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_daorp"]
radius = 41.0122

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_kkwod")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -6)
sprite_frames = SubResource("SpriteFrames_ryc0y")
autoplay = "default"

[node name="physic mask" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_gk36g")

[node name="Question Trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Question Trigger"]
shape = SubResource("CircleShape2D_daorp")

[connection signal="body_entered" from="Question Trigger" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Question Trigger" to="." method="_on_body_exited"]
[connection signal="ready" from="Question Trigger" to="Question Trigger" method="_on_ready"]
